# SpaceShooter

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  space-shooter.rc
src/: BackgroundManager.cpp  BackgroundManager.h  ColliderSystem.cpp  Constants.h  EnemyManager.cpp  EnemyManager.h  EntityCleaner.cpp  EntityCleaner.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GunManager.cpp  GunManager.h  KeyboardManager.cpp  KeyboardManager.h  LevelManager.cpp  LevelManager.h  Math.h  MusicManager.cpp  MusicManager.h  PlayerController.cpp  PlayerController.h  PlayerInitializer.h  PositionManager.cpp  PositionManager.h  SDL.cpp  SDL.h  SDLWrapper.cpp  SDLWrapper.h  SystemManager.cpp  SystemManager.h  TextRenderer.cpp  TextRenderer.h  TextureManager.cpp  TextureManager.h  TextureRepo.cpp  TextureRepo.h  main.cpp
src/component/: AnimationComponent.h  ColliderComponent.h  ComponentFlag.h  Components.h  GunComponent.cpp  GunComponent.h  PathComponent.cpp  PathComponent.h  ResId.h  SpawnComponent.h  SpeedComponent.h  SpriteComponent.h  TextComponent.h  TextureId.h  TextureParams.h  TransformComponent.cpp  TransformComponent.h  Vector2D.cpp  Vector2D.h
src/level/: Level.h
src/sdl/: SDLWrapper.cpp  SDLWrapper.h
src/system/: ColliderSystem.cpp  ColliderSystem.h  GunSystem.cpp  GunSystem.h  PositionSystem.cpp  PositionSystem.h  SystemManager.cpp  SystemManager.h  Systems.h  TextureSystem.cpp  TextureSystem.h
src/utils/: Math.h
